# tip

./: .gitignore  LICENSE  README.rst  stack.yaml  tip.cabal
app/: Main.hs
src/: Tip.hs  Utils.hs
test/: Spec.hs  run_tip.sh  version.sh
test/files/: bar.gpg  baz.gpg  foo.gpg
