name:                tip
version:             0.3.0.0
synopsis:            Tip - Quick encrypted notes for the terminal
description:         Please see README.rst
homepage:            http://github.com/duerrp/tip
license:             BSD3
license-file:        LICENSE
author:              Peter Duerr
maintainer:          duerrp@gmail.com
category:            Utils
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tip
  build-depends:       base
                     , process
                     , directory
                     , filepath
                     , regex-posix
                     , async
                     , ansi-terminal
  default-language:    Haskell2010

executable tip
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tip
                     , cmdargs
  default-language:    Haskell2010

test-suite tip-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tip
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , process
                     , regex-posix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/duerrp/tip
